--- a/sass/templates/sass_list_page.html
+++ b/sass/templates/sass_list_page.html
@@ -48,7 +48,7 @@
                         {{ sheet.other_biota }}
                     </td>
                     <td class="sheet-row">
-                        <a href="#" class="btn btn-sm btn-info">Update</a>
+                        <a href="/sass/update/{{ sheet.id }}" class="btn btn-sm btn-info">Update</a>
                     </td>
                 </tr>
             {% endfor %}
