--- a/bims/templates/navigation_bar.html
+++ b/bims/templates/navigation_bar.html
@@ -22,6 +22,9 @@
                         {% endif %}
                         <a class="dropdown-item" id="navbar-contact" href="/contact/">CONTACT</a>
                         <a class="dropdown-item" id="navbar-biblio" href="/bibliography/">BIBLIOGRAPHY</a>
+                        {% if is_sass_enabled %}
+                            <a class="dropdown-item" id="navbar-biblio" href="/sass/list/">SASS</a>
+                        {% endif %}
                          {% if user.is_authenticated %}
                              <div class="dropdown-divider"></div>
                             <a class="dropdown-item" id="navbar-geonode" href="/layers">GIS CATALOGUE</a>
