Change geonode people page to original theme

--- a/bims/templates/people/profile_detail.html
+++ b/bims/templates/people/profile_detail.html
@@ -1,4 +1,4 @@
-{% extends "people/profile_base.html" %}
+{% extends "people/profile_bims_base.html" %}
 {% load static %}
 {% load i18n %}
 {% load avatar_tags %}
