--- a/bims/templates/avatar/change.html
+++ b/bims/templates/avatar/change.html
@@ -1,4 +1,4 @@
-{% extends "people/profile_base.html" %}
+{% extends "people/profile_bims_base.html" %}
 {% load i18n avatar_tags %}
 {% load bootstrap_tags %}
 
