Show password requirements

--- a/bims/templates/account/password_set.html
+++ b/bims/templates/account/password_set.html
@@ -1,28 +1,27 @@
 {% extends "socialaccount/base.html" %}
 
-{% load i18n %}
 {% load bootstrap_tags %}
+{% load i18n %}
 
-{% block title %}{% trans "Password change" %}{% endblock %}
+{% block title %}{% trans "Set Password" %}{% endblock %}
 
 {% block body_outer %}
     <div class="page-header">
-        <h2>{% trans "Password Change" %}</h2>
+        <h2>{% trans "Password Set" %}</h2>
     </div>
+
     <div class="row">
         <div class="col-md-8">
-            <p class="lead">{% trans "Change your password here" %}</p>
+            <p class="lead">{% trans "Set your password here" %}</p>
             <form method="POST" action="">
                 <fieldset>
                     {% csrf_token %}
                     {{ form|as_bootstrap }}
                     <div class="form-actions">
-                        <button type="submit"
-                                class="btn btn-primary">{% trans "Change my password" %}</button>
+                        <button type="submit" class="btn btn-primary">{% trans "Set password" %}</button>
                     </div>
                 </fieldset>
             </form>
         </div>
     </div>
-
 {% endblock %}
