--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2206,6 +2206,14 @@ div:hover::-webkit-scrollbar {
 .layer-source-info {
     text-align: center;
     font-size: 80%;
+    word-wrap: break-word;
+}
+
+.layer-abstract{
+    margin: 0.5rem;
+    word-wrap: break-word;
+    white-space: normal;
+    padding: 0.5rem 0.5rem 1rem;
 }
 
 .sass-button {
