Add location site total

--- a/bims/templates/tracking/dashboard.html
+++ b/bims/templates/tracking/dashboard.html
@@ -57,6 +57,7 @@
                   <div class="breadcrumb">
                       <h3>Taxon records: <span style="padding-right: 2px;"><b>{{ taxon_count }}</b></span></h3>
                       <h3>Total validated collections: <span style="padding-right: 2px;"><b>{{ collections_count }}</b></span></h3>
+                      <h3>Total location site: <span style="padding-right: 2px;"><b>{{ location_site_count }}</b></span></h3>
                   </div>
                 </nav>
             </div>
