--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -276,6 +276,14 @@ html, body, .map, .map-wrapper, #map-container {
     margin-left: 85px;
     margin-top: 60px;
     z-index: 100;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    max-height: 90%;
+}
+
+.map-control-panel-box::-webkit-scrollbar
+{
+    width: 0px;
 }
 
 .map-search-result {
