Add settings values to enable/disable filter element

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2003,6 +2003,7 @@ div:hover::-webkit-scrollbar {
     color: rgb(65, 65, 65);
     width: 100%;
     padding: 5px;
+    height: 25px;
 }
 
 #spatial-scale-container {
