Updated required JS and HTML for values to be passed back via a radio button

--- a/sass/templates/form_page.html
+++ b/sass/templates/form_page.html
@@ -57,13 +57,24 @@
                             Stones In Current (SIC)
                         </td>
                         <td>
-                            <select class="form-control" name="sic-rating">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
+                            <div class="form-control sass-radio-label"
+                                 name="sic-rating">
+                                1&nbsp;
+                                <input type="radio" name="sic-rating"
+                                        value="1" checked>
+                                &nbsp;&nbsp;&nbsp;2&nbsp;
+                                <input type="radio" name="sic-rating"
+                                        value="2">
+                                &nbsp;&nbsp;&nbsp;3&nbsp;
+                                <input type="radio" name="sic-rating"
+                                        value="3">
+                                &nbsp;&nbsp;&nbsp;4&nbsp;
+                                <input type="radio" name="sic-rating"
+                                        value="4">
+                                &nbsp;&nbsp;&nbsp;5&nbsp;
+                                <input type="radio" name="sic-rating"
+                                        value="5">
+                            </div>
                         </td>
 
                     </tr>
@@ -72,13 +83,23 @@
                             Stones Out Of Current (SOOC)
                         </td>
                         <td>
-                            <select class="form-control" name="sooc-rating">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
+                            <div class="form-control sass-radio-label" name="sooc-rating">
+                                1&nbsp;
+                                <input type="radio" name="sooc-rating"
+                                        value="1" checked>
+                                &nbsp;&nbsp;&nbsp;2&nbsp;
+                                <input type="radio" name="sooc-rating"
+                                        value="2">
+                                &nbsp;&nbsp;&nbsp;3&nbsp;
+                                <input type="radio" name="sooc-rating"
+                                        value="3">
+                                &nbsp;&nbsp;&nbsp;4&nbsp;
+                                <input type="radio" name="sooc-rating"
+                                        value="4">
+                                &nbsp;&nbsp;&nbsp;5&nbsp;
+                                <input type="radio" name="sooc-rating"
+                                        value="5">
+                            </div>
                         </td>
 
                     </tr>
@@ -87,13 +108,23 @@
                             Bedrock
                         </td>
                         <td>
-                            <select class="form-control" name="bedrock-rating">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
+                            <div class="form-control sass-radio-label" name="bedrock-rating">
+                                1&nbsp;
+                                <input type="radio" name="bedrock-rating"
+                                        value="1" checked>
+                                &nbsp;&nbsp;&nbsp;2&nbsp;
+                                <input type="radio" name="bedrock-rating"
+                                        value="2">
+                                &nbsp;&nbsp;&nbsp;3&nbsp;
+                                <input type="radio" name="bedrock-rating"
+                                        value="3">
+                                &nbsp;&nbsp;&nbsp;4&nbsp;
+                                <input type="radio" name="bedrock-rating"
+                                        value="4">
+                                &nbsp;&nbsp;&nbsp;5&nbsp;
+                                <input type="radio" name="bedrock-rating"
+                                        value="5">
+                            </div>
                         </td>
 
                     </tr>
@@ -102,13 +133,23 @@
                             Aquatic Veg
                         </td>
                         <td>
-                            <select class="form-control" name="aquatic-veg-rating">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
+                            <div class="form-control sass-radio-label" name="aquatic-veg-rating">
+                                1&nbsp;
+                                <input type="radio" name="aquatic-veg-rating"
+                                        value="1" checked>
+                                &nbsp;&nbsp;&nbsp;2&nbsp;
+                                <input type="radio" name="aquatic-veg-rating"
+                                        value="2">
+                                &nbsp;&nbsp;&nbsp;3&nbsp;
+                                <input type="radio" name="aquatic-veg-rating"
+                                        value="3">
+                                &nbsp;&nbsp;&nbsp;4&nbsp;
+                                <input type="radio" name="aquatic-veg-rating"
+                                        value="4">
+                                &nbsp;&nbsp;&nbsp;5&nbsp;
+                                <input type="radio" name="aquatic-veg-rating"
+                                        value="5">
+                            </div>
                         </td>
 
                     </tr>
@@ -117,13 +158,23 @@
                             MargVeg In Current
                         </td>
                         <td>
-                            <select class="form-control" name="mic-rating">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
+                            <div class="form-control sass-radio-label" name="mic-rating">
+                                1&nbsp;
+                                <input type="radio" name="mic-rating"
+                                        value="1" checked>
+                                &nbsp;&nbsp;&nbsp;2&nbsp;
+                                <input type="radio" name="mic-rating"
+                                        value="2">
+                                &nbsp;&nbsp;&nbsp;3&nbsp;
+                                <input type="radio" name="mic-rating"
+                                        value="3">
+                                &nbsp;&nbsp;&nbsp;4&nbsp;
+                                <input type="radio" name="mic-rating"
+                                        value="4">
+                                &nbsp;&nbsp;&nbsp;5&nbsp;
+                                <input type="radio" name="mic-rating"
+                                        value="5">
+                            </div>
                         </td>
 
                     </tr>
@@ -132,13 +183,23 @@
                             MargVeg Out Of Current
                         </td>
                         <td>
-                            <select class="form-control" name="mooc-rating">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
+                            <div class="form-control sass-radio-label" name="mooc-rating">
+                                1&nbsp;
+                                <input type="radio" name="mooc-rating"
+                                        value="1" checked>
+                                &nbsp;&nbsp;&nbsp;2&nbsp;
+                                <input type="radio" name="mooc-rating"
+                                        value="2">
+                                &nbsp;&nbsp;&nbsp;3&nbsp;
+                                <input type="radio" name="mooc-rating"
+                                        value="3">
+                                &nbsp;&nbsp;&nbsp;4&nbsp;
+                                <input type="radio" name="mooc-rating"
+                                        value="4">
+                                &nbsp;&nbsp;&nbsp;5&nbsp;
+                                <input type="radio" name="mooc-rating"
+                                        value="5">
+                            </div>
                         </td>
 
                     </tr>
@@ -147,13 +208,23 @@
                             Gravel
                         </td>
                         <td>
-                            <select class="form-control" name="gravel-rating">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
+                            <div class="form-control sass-radio-label" name="gravel-rating">
+                                1&nbsp;
+                                <input type="radio" name="gravel-rating"
+                                        value="1" checked>
+                                &nbsp;&nbsp;&nbsp;2&nbsp;
+                                <input type="radio" name="gravel-rating"
+                                        value="2">
+                                &nbsp;&nbsp;&nbsp;3&nbsp;
+                                <input type="radio" name="gravel-rating"
+                                        value="3">
+                                &nbsp;&nbsp;&nbsp;4&nbsp;
+                                <input type="radio" name="gravel-rating"
+                                        value="4">
+                                &nbsp;&nbsp;&nbsp;5&nbsp;
+                                <input type="radio" name="gravel-rating"
+                                        value="5">
+                            </div>
                         </td>
 
                     </tr>
@@ -162,13 +233,23 @@
                             Sand
                         </td>
                         <td>
-                            <select class="form-control" name="sand-rating">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
+                            <div class="form-control sass-radio-label" name="sand-rating">
+                                1&nbsp;
+                                <input type="radio" name="sand-rating"
+                                        value="1" checked>
+                                &nbsp;&nbsp;&nbsp;2&nbsp;
+                                <input type="radio" name="sand-rating"
+                                        value="2">
+                                &nbsp;&nbsp;&nbsp;3&nbsp;
+                                <input type="radio" name="sand-rating"
+                                        value="3">
+                                &nbsp;&nbsp;&nbsp;4&nbsp;
+                                <input type="radio" name="sand-rating"
+                                        value="4">
+                                &nbsp;&nbsp;&nbsp;5&nbsp;
+                                <input type="radio" name="sand-rating"
+                                        value="5">
+                            </div>
                         </td>
 
                     </tr>
@@ -177,13 +258,23 @@
                             Mud
                         </td>
                         <td>
-                            <select class="form-control" name="mud-rating">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
+                            <div class="form-control sass-radio-label" name="mud-rating">
+                                1&nbsp;
+                                <input type="radio" name="mud-rating"
+                                        value="1" checked>
+                                &nbsp;&nbsp;&nbsp;2&nbsp;
+                                <input type="radio" name="mud-rating"
+                                        value="2">
+                                &nbsp;&nbsp;&nbsp;3&nbsp;
+                                <input type="radio" name="mud-rating"
+                                        value="3">
+                                &nbsp;&nbsp;&nbsp;4&nbsp;
+                                <input type="radio" name="mud-rating"
+                                        value="4">
+                                &nbsp;&nbsp;&nbsp;5&nbsp;
+                                <input type="radio" name="mud-rating"
+                                        value="5">
+                            </div>
                         </td>
 
                     </tr>
@@ -192,13 +283,23 @@
                             Hand picking/Visual observation
                         </td>
                         <td>
-                            <select class="form-control" name="hand-picking-rating">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
-                                <option>5</option>
-                            </select>
+                            <div class="form-control sass-radio-label" name="hand-picking-rating">
+                                1&nbsp;
+                                <input type="radio" name="hand-picking-rating"
+                                        value="1" checked>
+                                &nbsp;&nbsp;&nbsp;2&nbsp;
+                                <input type="radio" name="hand-picking-rating"
+                                        value="2">
+                                &nbsp;&nbsp;&nbsp;3&nbsp;
+                                <input type="radio" name="hand-picking-rating"
+                                        value="3">
+                                &nbsp;&nbsp;&nbsp;4&nbsp;
+                                <input type="radio" name="hand-picking-rating"
+                                        value="4">
+                                &nbsp;&nbsp;&nbsp;5&nbsp;
+                                <input type="radio" name="hand-picking-rating"
+                                        value="5">
+                            </div>
                         </td>
 
                     </tr>
